# llm_engineering_course

./: .gitignore  README.md
01-web-summarizer/: README.md  devops_news_gemini.ipynb  devops_news_lmstudio.ipynb  devops_news_ollama.ipynb  pyproject.toml
02-genai-first-steps/: README.md  Tokenizers.ipynb  chatcasual_localllm.ipynb  pyproject.toml
03-rag/: README.md  pyproject.toml  simple-rag.ipynb  split-text.ipynb
