[project]
name = "web-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.36.0",
    "ipython>=9.5.0",
    "ollama>=0.5.3",
    "openai>=1.107.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
