[project]
name = "03-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "openai>=1.109.1",
    "pypdf>=6.1.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
]
